<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myPresenter</string>
    <string name="action_start_set">Start</string>
    <string name="dialogDisplayTimeTitle">Wählen Sie die Anzeigezeit</string>
    <string name="dialogChooseFormatTitle">Dateiformate auswählen</string>
    <string name="setTime">Zeit</string>
    <string name="filterMediaFormats">Filtern</string>
    <string name="file_name1">Ordner Anlegen</string>
    <string name="buttonOK">OK</string>
    <string name="buttonCancel">Abbrechen</string>
    <string name="dialogChooseFormatMinutesText">minutes</string>
    <string name="dialogChooseFormatSecondsText">seconds</string>
    <string name="send_to">Senden</string>
    <string name="file_name">Screenshots</string>
    <string name="share">Teilen</string>
    <string name="open_with">Öffnen mit</string>

</resources>
